# MemoLink

./: .gitignore  README.md
desktop/: package-lock.json  package.json
desktop/scripts/: add-firewall.bat
desktop/src/: App.css  App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  lib.rs  model.rs  net.rs  stickies.rs  store.rs
docs/: design.md  protocol.md
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/memolink/memolink_mobile/: MainActivity.kt
mobile/android/app/src/main/res/drawable/: ic_launcher.xml
mobile/lib/: main.dart
mobile/lib/models/: device.dart  memo.dart  protocol.dart
mobile/lib/screens/: edit_screen.dart  home_screen.dart  pair_screen.dart  settings_screen.dart
mobile/lib/services/: identity.dart  store.dart  sync_client.dart
tools/: sim-phone.mjs
