[package]
name = "desktop"
version = "0.1.0"
description = "MemoLink desktop client"
authors = ["MemoLink"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
local-ip-address = "0.6"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
anyhow = "1"
parking_lot = "0.12"
dirs = "6"

[features]
# Used by production builds so the app loads embedded assets instead of localhost:1420
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
